# leafi

./: .gitignore  README.md
LeaFi-enhanced DSTree/: README.md
LeaFi-enhanced MESSI/: CMakeLists.txt  README.md  main.cpp
LeaFi-enhanced MESSI/src/answers/: CMakeLists.txt  answer.c  answer.h
LeaFi-enhanced MESSI/src/filters/: CMakeLists.txt  allocator.cpp  allocator.h  conformal_adjustor.cpp  conformal_adjustor.h  lr_scheduler.cpp  lr_scheduler.h  neural_filter.cpp  neural_filter.h  series_dataset.cpp  series_dataset.h  static_variables.cpp  static_variables.h
LeaFi-enhanced MESSI/src/index/: CMakeLists.txt  index.c  index.h  index_commons.c  index_commons.h  index_engine.c  index_engine.h  node.c  node.h
LeaFi-enhanced MESSI/src/paa/: CMakeLists.txt  paa.c  paa.h
LeaFi-enhanced MESSI/src/query/: CMakeLists.txt  query.c  query.h  query_commons.h  query_engine.c  query_engine.h  query_engine_wfilter.cpp  query_engine_wfilter.h
LeaFi-enhanced MESSI/src/sax/: CMakeLists.txt  breakpoints.c  breakpoints.h  sax.c  sax.h
LeaFi-enhanced MESSI/src/utils/: CMakeLists.txt  config.c  config.h  distance.c  distance.h  file.c  file.h  generator.h  globals.c  globals.h  sort.c  sort.h  stats.h  str.c  str.h
